--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
+
+body, html, #root {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #445777;
+  color: #1e2432;
+  height: 100%;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.search-container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  border-radius: 20px;
+  box-shadow: 0px 3px 5px 0px rgba(15, 15, 15, 0.404);
+}
+
+button{
+  padding: 1rem;
+  border: none;
+  background-color: rgba(250, 250, 250, 0.85);
+  cursor: pointer;
+  border-radius: 0px 20px 20px 0px;
+}
+
+.search-icon{
+  font-size: 1.5rem;
+}
+
+.search {
+  padding: 1.5rem 2.3rem ;
+  outline: none;
+  border: none;
+  width: 11.5rem;
+  border-radius: 20px 0px 0px 20px;
+  background: rgba(250, 250, 250, 0.85);
+  
+}
+
+.city-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1.5rem 2.3rem;
+  border-radius: 20px;
+  width: 15rem;
+  background: rgba(250, 250, 250, 0.85);
+  box-shadow: 0px 3px 5px 0px rgba(15, 15, 15, 0.404);
+}
+
+p {
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.city-temp {
+  font-size: 5rem;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #1e2432;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.city-card sup {
+  font-size: 0.5em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.city-name {
+  max-width: 15rem;
+  font-size: 2em;
+  text-align: center;
+  line-height: 2rem;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.city {
+  word-break: break-word;
+}
+
+.city-name sup {
+  padding: 0.2em 0.6em;
+  margin-left: 0.2em;
+  border-radius: 30px;
+  color: #fff;
+  background: #ff8c00;
+}
+
+.city-feels-like {
+  margin-top: 2rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.humidity {
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
+.city-icon {
+  margin-top: 10px;
+  width: 100px;
+  height: 100px;
+}
+
+.info {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 600px) {
+  .search {
+      width: 16.5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .city-card {
+      width: 20rem;
   }
 }
