--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 
+:root {
+  --baxShadow: 0px 2px 5px 0px rgba(15, 15, 15, 0.253);
+  --gray: rgba(250, 250, 250, 0.445);
+}
+
 body, html, #root {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,7 +14,6 @@ body, html, #root {
   justify-content: center;
   align-items: center;
   height: 100%;
-  background: linear-gradient(180deg, rgba(175,196,202,1) 0%, rgba(194,144,137,1) 100%);
   background: linear-gradient(180deg, rgb(152, 194, 206) 0%, rgb(196, 132, 123) 100%);
 }
 
@@ -18,7 +22,6 @@ body, html, #root {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #1e2432;
   margin: auto;
 }
 
@@ -27,13 +30,13 @@ body, html, #root {
   justify-content: center;
   margin-bottom: 2rem;
   border-radius: 20px;
-  box-shadow: 0px 2px 5px 0px rgba(15, 15, 15, 0.253);
+  box-shadow: var(--baxShadow);
 }
 
 button{
   padding: 1rem;
   border: none;
-  background-color: rgba(250, 250, 250, 0.445);
+  background-color: var(--gray);
   cursor: pointer;
   border-radius: 0px 20px 20px 0px;
 }
@@ -48,7 +51,7 @@ button{
   border: none;
   width: 11.5rem;
   border-radius: 20px 0px 0px 20px;
-  background: rgba(250, 250, 250, 0.445);
+  background-color: var(--gray);
   
 }
 
@@ -60,7 +63,7 @@ button{
   padding: 1.5rem 2.3rem;
   border-radius: 20px;
   width: 15rem;
-  box-shadow: 0px 2px 5px 0px rgba(15, 15, 15, 0.253);
+  box-shadow: var(--baxShadow);
   background-color: rgba(176, 196, 202, 0.445)
 }
 
@@ -72,7 +75,7 @@ button{
   padding: 1.5rem 2.3rem;
   border-radius: 20px;
   width: 15rem;
-  box-shadow: 0px 3px 5px 0px rgba(15, 15, 15, 0.253);
+  box-shadow: var(--baxShadow);
   background-color: rgba(194, 144, 137, 0.445);
 }
 
@@ -111,11 +114,11 @@ p {
 }
 
 .city-name sup {
-  padding: 0.2em 0.6em;
+  padding: 0.2em 0.5em;
   margin-left: 0.2em;
-  border-radius: 30px;
+  border-radius: 10px;
   color: #fff;
-  background: #ff8c00;
+  background: #ffad4f;
 }
 
 .city-feels-like {
@@ -154,5 +157,5 @@ p {
 
   .city-card-cold {
     width: 20rem;
-}
+  }
 }
